style.css
:root {
  --color-orange: hsl(31, 77%, 52%);
  --color-cyan: hsl(184, 100%, 22%);
  --color-dark-cyan: hsl(179, 100%, 13%); 
}
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

body {
  background-color: hsl(0, 0%, 95%);
  font-family: 'Lexend Deca', sans-serif;
}

h1, button{
  color: hsl(0, 0%, 95%);
}

h1 {
  font-family: 'Big Shoulders Display', cursive;
  font-size: 50px;
  text-transform: uppercase;
}
p {
  color:hsla(0, 0%, 100%, 0.75);
  line-height: 1.6;
}

.btn {
  padding: 12px 35px;
  font-size: 15px;
  border-radius: 25px;
  border: none;
  display: block;
  font-family: 'Lexend Deca', sans-serif;
}
.container {
  max-width: 375px;
  margin: 2rem auto;
}
.company-container {
  display: flex;
  align-items: center;
  flex-direction: column;
}
.company__title h1 {
  padding: 15px 0;
}
.company__info .btn {
  margin-top: 1rem;
}

/* Need to check for better way if possible */
.color-orange {
  color: var(--color-orange);
}
.color-cyan {
  color: var(--color-cyan);
}
.color-dark-cyan {
  color: var(--color-dark-cyan);
}

.bg-orange {
  background-color: var(--color-orange);
}
.bg-cyan {
  background-color: var(--color-cyan);
}
.bg-dark-cyan {
  background-color: var(--color-dark-cyan);
}
.p-20 {
  padding: 40px;
}

